tests/marouter/errors/incomplete_districts/from_missing1of2_allowed/options.marouter
--ignore-errors -n input_net.net.xml -d input_taz.taz.xml -m input_od_o.fma -o routes.rou.xml
